# backend/src/dto/example-request.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ExampleRequestDto {
+  @ApiProperty({
+    example: 'Ahoj Cognify',
+    description: 'Text, ktery se ma vratit zpet v odpovedi.',
+  })
+  message!: string;
+}
